@@ -1,6 +1,9 @@
 Changes from jTDS 0.8.1
 =========================
 
+07/26/2004 - Brian Heineman
+ o Removed extraneous methods from SharedSocket and SharedNamedPipe.
+
 07/25/2004 - David Kilzer
  o Fixed bug when using instances with named pipes.
 
